--- a/myproject/myproject/templates/myblog/includes/aside_item.html
+++ b/myproject/myproject/templates/myblog/includes/aside_item.html
@@ -1,4 +1,4 @@
-{% load i18n easy_thumbnails_tags cms_tags %}
+{% load myblog_tags i18n easy_thumbnails_tags cms_tags %}
 
 <!-- <ul class="post-detail">
     {% if post.author %}
@@ -40,13 +40,34 @@
                 <div class="blog-grids row mb-3">
                     <div class="col-md-5 blog-grid-left">
                         <a href="/en/blog/Create-Your-Own-CMS-Blog/">
-                            <img alt=Create Your Own CMS-Blog class="card-img-top img-fluid"  src="{{ MEDIA_URL }}/cms_img4.jpeg" >
+                            {% if image and post.main_image %}
+                                <div class="blog-visual">
+                                    {% thumbnail post.main_image post.thumbnail_options.size crop=post.thumbnail_options.crop upscale=post.thumbnail_options.upscale subject_location=post.main_image.subject_location as thumb %}
+                                    <img src="{{ thumb.url }}" alt="{{ post.main_image.default_alt_text }}" width="{{ thumb.width }}" height="{{ thumb.height }}" /> 
+                               
+                                </div>
+                            {% else %}
+                                    {% media_images post as previews %}
+                                    <div class="blog-visual">
+        
+                                        {% for preview in previews %}
+                                            <img src="{{ MEDIA_URL }}/cms_img6.jpeg" width="250" height="150" />
+                                        {% endfor %}
+                                    </div>
+                            {% endif %}
+                            <!-- <img alt=Create Your Own CMS-Blog class="card-img-top img-fluid"  src="{{ MEDIA_URL }}/cms_img4.jpeg" width="350" > -->
                         </a>
                     </div>
                     <div class="col-md-7 blog-grid-right">
                         <h5>
                             <a href="/en/blog/Create-Your-Own-CMS-Blog/">Create Your Own CMS-Blog</a>
-
+                             <div class="blog-lead">
+                                {% if not TRUNCWORDS_COUNT_ASIDE %}
+                                    {% render_model post "abstract" "" "" "safe" %}
+                                {% else %}
+                                    {% render_model post "abstract" "" "" "truncatewords_html:TRUNCWORDS_COUNT_ASIDE|safe"  %}
+                                {% endif %}
+                            </div>
                         </h5>
                         <div class="sub-meta">
                             <span>
