--- a/myproject/myproject/templates/myblog/includes/section_item.html
+++ b/myproject/myproject/templates/myblog/includes/section_item.html
@@ -1,8 +1,7 @@
 {% load myblog_tags i18n easy_thumbnails_tags cms_tags %}
 
 <div class="col-md-6 jobs_index_middle_panels" id="post-{{ post.slug }}" >
-    <div class="card my-4"  style="width: 35rem;">
-      
+    <div class="card my-4 py-2"  style="width: 35rem;">
         <a  href="{{ post.get_absolute_url }}" >
             {% if image and post.main_image %}
                 {% thumbnail post.main_image post.thumbnail_options.size crop=post.thumbnail_options.crop upscale=post.thumbnail_options.upscale subject_location=post.main_image.subject_location as thumb %}
@@ -14,20 +13,39 @@
                 {% endfor %}
             {% endif %}
         </a>
-        <div class="card card-body" >
+        <div class="card card-body h-100" >
             <ul class="blog-icons my-4">
                 <li>
                     <a  href="{{ post.get_absolute_url }}" >
-                        <i class="far fa-calendar-alt"></i> May 18, 2020</a>
-                </li>
+                        {% if post.date_published %}
+                        <span>
+                            {{ post.date_published|date:"DATE_FORMAT" }} 
+                        </span> 
+                    </a>
+                        {% endif %}
+                </li><!--//list-->
                 <li class="mx-2">
                     <a  href="{{ post.get_absolute_url }}" >
-                        <i class="far fa-comment"></i> 0</a>
-                </li>
+                        <span class="post-detail tags">
+                            {% if post.categories.exists %}
+                                {% for category in post.categories.all %}
+                                    {% if category.slug %}
+                                        <label class="category_{{ forloop.counter }}"><a href="{% url 'myblog:posts-category' category=category.slug %}" class="blog-categories-{{ category.count }}">{{ category.name }}</a>{% if not forloop.last %}, {% endif %}</label>
+                                    {% endif %}
+                                {% endfor %}
+                            {% endif %}
+                            {% if post.tags.exists %}
+                                {% for tag in post.tags.all %}
+                                    <label class="tag_{{ forloop.counter }}"><a href="{% url 'myblog:posts-tagged' tag=tag.slug %}" class="blog-tag blog-tag-{{ tag.count }}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}</label>
+                                {% endfor %}
+                            {% endif %}
+                        </span>
+                    </a>
+                </li><!--//list-->
                 <li>
                     <a  href="{{ post.get_absolute_url }}" >
                         <i class="fas fa-eye"></i> 271</a>
-                </li>
+                </li><!--//list-->
 
             </ul>
             <h3 class="card-title ">
@@ -37,7 +55,7 @@
                 <a  href="{{ post.get_absolute_url }}" >{{ post.subtitle }}</a>
             </h5>
             <p class="card-text mb-0 mx-0">
-                {% if not TRUNCWORDS_COUNT %}
+                {% if not TRUNCWORDS_COUNT  %}
                     {% render_model post "abstract" "" "" "safe" %}
                 {% else %}
                     {% render_model post "abstract" "" "" "truncatewords_html:TRUNCWORDS_COUNT|safe"  %}
