--- a/myproject/myproject/templates/myblog/post_detail.html
+++ b/myproject/myproject/templates/myblog/post_detail.html
@@ -6,44 +6,43 @@
 
 {% block content_blog %}{% spaceless %}
 <div class="container">
-<div class="row inner-sec">
-<div class="col-lg-8 left-blog-info-w3layouts-agileits text-left">
-<article id="post-{{ post.slug }}" class="post-item post-detail">
-    <header>
-        <h2>{% render_model post "title" %}</h2>
-        {% if post.subtitle %}
-            <h3>{% render_model post "subtitle" %}</h3>
-        {% endif %}
-        {% block blog_meta %}
-            {% include "myblog/includes/blog_meta.html" %}
-        {% endblock %}
-    </header>
-    {% if not post.main_image_id %}
-        <div class="blog-visual">{% render_placeholder post.media %}</div>
-    {% else %}
-    <div class="blog-visual">
-        {% thumbnail post.main_image post.full_image_options.size crop=post.full_image_options.crop upscale=post.full_image_options.upscale subject_location=post.main_image.subject_location  as thumb %}
-        <img src="{{ post.main_image.get_image_full_url }}" alt="{{ post.main_image.default_alt_text }}" width="{{ post.main_image.get_image_width }}" height="{{ post.main_image.get_image_height }}" />
+    <div class="row inner-sec">
+        <div class="col-lg-8 left-blog-info-w3layouts-agileits text-left">
+            <article id="post-{{ post.slug }}" class="post-item post-detail">
+                <header>
+                    <h2>{% render_model post "title" %}</h2>
+                    {% if post.subtitle %}
+                        <h3>{% render_model post "subtitle" %}</h3>
+                    {% endif %}
+                    {% block blog_meta %}
+                        {% include "myblog/includes/blog_meta.html" %}
+                    {% endblock %}
+                </header>
+                {% if not post.main_image_id %}
+                    <div class="blog-visual">{% render_placeholder post.media %}</div>
+                {% else %}
+                    <div class="blog-visual">
+                        <img src="{{ post.main_image.url }}" alt="{{ post.main_image.default_alt_text }}" width="{{ post.main_image.get_image_width }}" height="{{ post.main_image.get_image_height }}" />
+                    </div>
+                {% endif %}
+                {% endspaceless %}
+                <br>
+                {% if post.app_config.use_placeholder %}
+                    <div class="blog-content">{% render_placeholder post.content %}</div>
+                {% else %}
+                    {% render_model post "abstract" "" "" "safe" %}
+                {% endif %}
+                {% if view.liveblog_enabled %}
+                    {% include "liveblog/includes/post_detail.html" %}
+                {% endif %}
+                <!-- Javascript will need the id -->
+                <p id="detail-post-id" hidden>{{ post.id }}</p>
+            </article>
+        </div>
     </div>
-    {% endif %}
-    {% endspaceless %}
-    {% if post.app_config.use_placeholder %}
-        <div class="blog-content">{% render_placeholder post.content %}</div>
-    {% else %}
-        <div class="blog-content">{% render_model post "post_text" "post_text" "" "safe" %}</div>
-    {% endif %}
-    {% if view.liveblog_enabled %}
-        {% include "liveblog/includes/post_detail.html" %}
-    {% endif %}
-    {% if post.related.exists %}
-        <section class="post-detail-list">
-        {% for related in post.related.all %}
-            {% include "myblog/includes/aside_item.html" with post=related image="true" TRUNCWORDS_COUNT=TRUNCWORDS_COUNT %}
-        {% endfor %}
-        </section>
-    {% endif %}
-</article>
 </div>
-</div>
-</div>
+<div class="tech-btm">
+    
+  
+</div><!--class="tech-btm"-->
 {% endblock content_blog %}
